# Q-A

./: .gitignore  README.md  pyproject.toml  test_webhooks.py
backend/: .env.example  config.py  db.py  main.py  requirements.txt  websocket_manager.py
backend/routers/: auth.py  questions.py
backend/schemas/: __init__.py
frontend/: next.config.js  package-lock.json  package.json
frontend/components/: ConnectionStatus.js  Navbar.js  QuestionCard.js  QuestionForm.js
frontend/pages/: dashboard.js  forum.js  index.js  login.js  register.js
frontend/styles/: globals.css
frontend/utils/: api.js  auth.js  websocket.js
