[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "cryptography>=46.0.3",
    "fastapi>=0.124.0",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
]
